--- a/templates/chat.html
+++ b/templates/chat.html
@@ -161,11 +161,13 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 
   socket.on('remove_message', (msgId) => {
+    console.log("[CLIENT] Removing message:", msgId);
     const msgEl = document.querySelector(`.chat-message[data-id='${msgId}']`);
     if (msgEl) msgEl.remove();
   });
 
   function deleteMessage(id) {
+    console.log("[CLIENT] Deleting message:", id);
     socket.emit('delete_message', id);
   }
 
