--- a/templates/chat.html
+++ b/templates/chat.html
@@ -79,7 +79,8 @@
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  let oldestMessageId = null;
+  let oldestMessageId = window.oldestMessageId || null;
+
 let loadingOlderMessages = false;
 
   const socket = io();
