Fix template links: url_for('games') -> url_for('game'); add legacy /games redirect

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -6,7 +6,7 @@
 <div class="main-layout">
   <!-- LEFT PANEL (hidden in chat view) -->
   <div class="game-box" style="display:none">
-    <a href="{{ url_for('games') }}">
+    <a href="{{ url_for('game') }}">
       🎮 Game_1
     </a>
   </div>
