--- a/templates/game.html
+++ b/templates/game.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="game-box" style="position:relative; padding:20px;">
-  <a href="{{ url_for('games') }}" 
+  <a href="{{ url_for('game') }}" 
      style="position:absolute; top:20px; left:20px;
             display:flex; align-items:center; justify-content:center;
             width:90px; height:90px;
