--- a/templates/game.html
+++ b/templates/game.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Chatroom{% endblock %}
+{% block title %}{{ room|default('Chatroom') }}{% endblock %}
+
 
 {% block content %}
 <div class="game-box" style="position:relative; padding:20px;">
-  <a href="{{ url_for('game') }}" 
+  <a href="{{ url_for('game_room', room_name='Game_1') }}" 
      style="position:absolute; top:20px; left:20px;
             display:flex; align-items:center; justify-content:center;
             width:90px; height:90px;
@@ -13,6 +14,7 @@
             box-shadow:0 2px 6px rgba(0,0,0,0.15);">
     🎮 Game_1
   </a>
+
 
   <!-- Mount point for your games module -->
   <div id="gx-root" style="margin-top:140px;"></div>
