chore(ui): Game_1 tile links to /game/Game_1/tables

--- a/templates/games/_panel.html
+++ b/templates/games/_panel.html
@@ -1,4 +1,4 @@
-<a class="game-tile" href="{{ url_for('game_room', room_name='Game_1') }}">
+<a class="game-tile" href="{{ url_for('game_tables', room_name='Game_1') }}">
   <span class="icon">🎮</span>
   <span>Game_1</span>
 </a>
